--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -38,10 +38,12 @@ spec:
               containerPort: 8080
               protocol: TCP
           livenessProbe:
+            initialDelaySeconds: 10
             httpGet:
               path: /articles
               port: http
           readinessProbe:
+            initialDelaySeconds: 10
             httpGet:
               path: /articles
               port: http
