--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -37,16 +37,22 @@ spec:
             - name: http
               containerPort: 8080
               protocol: TCP
-          livenessProbe:
-            initialDelaySeconds: 10
-            httpGet:
-              path: /articles
-              port: http
           readinessProbe:
-            initialDelaySeconds: 10
             httpGet:
-              path: /articles
-              port: http
+              path: actuator/health
+              port: 4043
+            initialDelaySeconds: 15
+            timeoutSeconds: 2
+            periodSeconds: 3
+            failureThreshold: 2
+          livenessProbe:
+            httpGet:
+              path: actuator/health
+              port: 4043
+            initialDelaySeconds: 100
+            timeoutSeconds: 2
+            periodSeconds: 8
+            failureThreshold: 1
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
