--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -18,6 +18,7 @@ jobs:
         with:
           command: lint
   package:
+    runs-on: ubuntu-latest
     needs: lint
     steps:
       - name: Print
