--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -12,14 +12,20 @@ jobs:
         uses: actions/checkout@v2
       - name: Fetch history
         run: git fetch --prune --unshallow
-      - name: Run testing
-        id: lint
-        uses: helm/chart-testing-action@v1.0.0
-        with:
-          command: lint
+      #- name: Run testing TODO
+      #  uses: helm/chart-testing-action@v1.0.0
+      #  with:
+      #    command: lint
   package:
     runs-on: ubuntu-latest
     needs: lint
     steps:
       - name: Print
         run: echo 'package chart'
+      - name: Package and push Chart
+        uses: unwrittenmedia/helm3-push-action@v1.0.2
+        env:
+          CHART_FOLDER: '.'
+          CHARTMUSEUM_URL: 'https://harbor.lhaidacher.com/chartmuseum'
+          CHARTMUSEUM_USER: '${{ secrets.HARBOR_USERNAME }}'
+          CHARTMUSEUM_PASSWORD: '${{ secrets.HARBOR_PASSWORD }}'
