--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -20,8 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: lint
     steps:
-      - name: Print
-        run: echo 'package chart'
+      - name: Checkout
+        uses: actions/checkout@v2'
       - name: Package and push Chart
         uses: unwrittenmedia/helm3-push-action@v1.0.2
         env:
