--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -21,7 +21,7 @@ jobs:
     needs: lint
     steps:
       - name: Checkout
-        uses: actions/checkout@v2'
+        uses: actions/checkout@v2
       - name: Package and push Chart
         uses: unwrittenmedia/helm3-push-action@v1.0.2
         env:
