--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -5,27 +5,27 @@ on:
     branches: [ master ]
 
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Fetch history
-        run: git fetch --prune --unshallow
+  #lint:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - name: Checkout
+  #      uses: actions/checkout@v2
+  #    - name: Fetch history
+  #      run: git fetch --prune --unshallow
       #- name: Run testing TODO
       #  uses: helm/chart-testing-action@v1.0.0
       #  with:
       #    command: lint
   package:
     runs-on: ubuntu-latest
-    needs: lint
+    #needs: lint
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Package and push Chart
         uses: unwrittenmedia/helm3-push-action@v1.0.2
         env:
-          CHART_FOLDER: '.'
+          CHART_FOLDER: 'onlineshop'
           CHARTMUSEUM_URL: 'https://harbor.lhaidacher.com/chartmuseum'
           CHARTMUSEUM_USER: '${{ secrets.HARBOR_USERNAME }}'
           CHARTMUSEUM_PASSWORD: '${{ secrets.HARBOR_PASSWORD }}'
