--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -25,7 +25,8 @@ jobs:
       - name: Package and push Chart
         uses: goodsmileduck/helm-push-action@v3.2.4
         env:
-          CHART_FOLDER: '.'
+          SOURCE_FOLDER: '..'
+          CHART_FOLDER: 'search-service-chart'
           CHARTMUSEUM_URL: 'https://harbor.lhaidacher.com/chartmuseum/onlineshop'
           CHARTMUSEUM_USER: '${{ secrets.HARBOR_USERNAME }}'
           CHARTMUSEUM_PASSWORD: '${{ secrets.HARBOR_PASSWORD }}'
