--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Package chart
         env:
-          - USERNAME: test
+          USERNAME: test
         run: echo $USERNAME
       #- name: Package and push Chart
       #  uses: goodsmileduck/helm-push-action@v3.2.4
