added push plugin

--- a/.github/workflows/helm-build.yaml
+++ b/.github/workflows/helm-build.yaml
@@ -24,8 +24,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Package chart
         run: helm package .
-      - name: Check helm versoin
-        run: helm version
+      - name: Install helm push plugin
+        run: helm plugin install https://github.com/chartmuseum/helm-push.git
       - name: Push chart
         env:
           URL: https://harbor.lhaidacher.com/chartmuseum/onlineshop
